--- a/TextRPG_V2/TextRPG_V2.csproj
+++ b/TextRPG_V2/TextRPG_V2.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Managers\EntityManager.cs" />
     <Compile Include="Managers\GameManager.cs" />
     <Compile Include="Managers\ItemManager.cs" />
+    <Compile Include="Quest.cs" />
     <Compile Include="Managers\QuestManager.cs" />
     <Compile Include="Managers\UIManager.cs" />
     <Compile Include="Maps\Map.cs" />
